2008-01-25  Sam Steingold  <sds@gnu.org>

	* pathname.d (get_time_size) [WIN32_NATIVE]: accept directories;
	this should fix the 2007-12-31 patch for woe32
	Thanks to Michael Kappert <michael.kappert@gmx.net> for testing.

2008-01-24  Sam Steingold  <sds@gnu.org>

	* lndir: do not link over CVS directories

2008-01-23  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1781476 ]: signal handling examples in glibc fail
	* modules/bindings/glibc/linux.lisp (sigaction): sa_restorer is
	now a generic pointer, not a pointer to a function, because...
	  The sa_restorer element is obsolete and should not be used.
	  POSIX does not specify a sa_restorer element.
	On Linux 2.6.22.7-57.fc6, sigaction(SIGINT) returns invalid
	pointers as sa_restorer

2008-01-23  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (finalize-coutput-file): constants
	*CONSTANT-TABLE* are now (const . guard)
	(DEF-C-CONST): accept :GUARD

2008-01-22  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (SIGSET_NWORDS): compute using
	ffi:ulong, as specified in <bits/sigset.h>
	(sigset_t): array of ulong, as specified in <bits/sigset.h>

2008-01-22  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1407486 ]: FFI revalidates too many library functions
	in new session
	* foreign.d (check_faddress_valid): check that validate_fpointer()
	actually did make the pointer valid
	(update_library): make sure that the non-validatable object
	remains marked as invalid

2008-01-22  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out1): print INVALID for invalid foreign
	functions and foreign addresses

2008-01-22  Sam Steingold  <sds@gnu.org>

	* control.d (APPLY, specdecled_): avoid GCC "warning: value
	computed is not used"

2008-01-22  Sam Steingold  <sds@gnu.org>

	* savemem.lisp (*saveinitmem-verbose*): add defvar
	(saveinitmem): :verbose defaults to *saveinitmem-verbose*
	* spvw.d (init_symbol_values): define *SAVEINITMEM-VERBOSE*
	(main_actions): set it to NIL when argv_verbose < 1